3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/potion.c: Fix up change_abil() to more properly deal with potions -
   characters could get 0 stat values.  Also, messages were not being properly
   displayed.  Patch is slightly modified from one sent in by Bernd Edler.
MSW 2004-04-05

server/main.c: Add extra checking for valid map coordinates after we grab
   them from the destination map itself - if a map is broken and has
   default enter_ coordinates outside the maps range, this previously
   resulted in a crash.
server/pets.c: Pass the correct map object into insert_ob_in_map().
MSW 2004-04-03

server/monster.c: fixed wiz's hidden mode not working on monsters.
Ryo 2004-03-28

common/porting.c
include/libproto.h
include/win32.h: added 'const' specifier to str-related functions.
Ryo 2004-03-26

common/exp.c
common/living.c
common/loader.[cl]
common/porting.c
server/c_misc.c
server/c_wiz.c
server/hiscore.c
server/resurrection.c: fixed %lld to %I64d for Windows.
Ryo 2004-03-26

server/attack.c: Add scare_creature() function, which sets FLAG_SCARED
   and also sets up appropriate enemy.  Clean up some formatting in
   other functions, and fix friendly fire - move it out of the loop for
   all attacktypes (can be after we have figured out max damage).  Also,
   has a bug where if an attach wasn't doing any damage, friendly fire could
   actually make it do damage (eg, fear spell).
server/player.c: Fix up flee_player() to be map tile aware.  Also, add
   call to flee_player() in handle_newcs_player() so player will run away.
MSW 2004-03-24

server/attack.c: Add missing skill=NULL in kill_object() - can be rare
   cases where the proper skill can't be found.